# Mnemosyne

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
docs/: architecture.md
public/soundfonts/: README.md
scripts/: build.ps1  dev.ps1
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/data/: audioExamples.ts  bachBwv846Example.json  brahmsWaltzOp39No15Example.json  ideaRepository.ts  schumannHascheMannExample.json
src/lib/: latex.ts  markdown.ts  midi.ts  pixelTools.ts  summary.ts  time.ts
src/store/: ideaStore.ts
src/types/: idea.ts
src/ui/: App.tsx
