[package]
name = "mnemosyne"
version = "0.0.0"
description = "A local-first creative workspace for capturing ideas."
authors = ["Mnemosyne"]
edition = "2021"

[lib]
name = "mnemosyne_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dirs = "6"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
